fix: AC badge not visible in group 1 PDP

--- a/src/style/amazon/blank_pdp.css
+++ b/src/style/amazon/blank_pdp.css
@@ -4,7 +4,7 @@
 #twister_feature_div,
 /* Badge1 */
 #acBadge_feature_div {
-    display: none !important;
+    display: none;
 }
 
 /*Add to Cart Button*/
